; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/macintosh/extr_mediabay.c_keylargo_mb_content.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/macintosh/extr_mediabay.c_keylargo_mb_content.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.media_bay_info = type { i32 }

@KL_GPIO_MEDIABAY_IRQ = common dso_local global i32 0, align 4
@KEYLARGO_GPIO_INPUT_DATA = common dso_local global i32 0, align 4
@MB_NO = common dso_local global i32 0, align 4
@KEYLARGO_MBCR = common dso_local global i32 0, align 4
@KL_MBCR_MB0_ENABLE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.media_bay_info*)* @keylargo_mb_content to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @keylargo_mb_content(%struct.media_bay_info* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.media_bay_info*, align 8
  %4 = alloca i32, align 4
  store %struct.media_bay_info* %0, %struct.media_bay_info** %3, align 8
  %5 = load %struct.media_bay_info*, %struct.media_bay_info** %3, align 8
  %6 = load i32, i32* @KL_GPIO_MEDIABAY_IRQ, align 4
  %7 = call i32 @MB_IN8(%struct.media_bay_info* %5, i32 %6)
  %8 = load i32, i32* @KEYLARGO_GPIO_INPUT_DATA, align 4
  %9 = and i32 %7, %8
  store i32 %9, i32* %4, align 4
  %10 = load i32, i32* %4, align 4
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %12, label %17

12:                                               ; preds = %1
  %13 = load i32, i32* %4, align 4
  %14 = load %struct.media_bay_info*, %struct.media_bay_info** %3, align 8
  %15 = getelementptr inbounds %struct.media_bay_info, %struct.media_bay_info* %14, i32 0, i32 0
  store i32 %13, i32* %15, align 4
  %16 = load i32, i32* @MB_NO, align 4
  store i32 %16, i32* %2, align 4
  br label %49

17:                                               ; preds = %1
  %18 = load %struct.media_bay_info*, %struct.media_bay_info** %3, align 8
  %19 = getelementptr inbounds %struct.media_bay_info, %struct.media_bay_info* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = load i32, i32* %4, align 4
  %22 = icmp ne i32 %20, %21
  br i1 %22, label %23, label %42

23:                                               ; preds = %17
  %24 = load %struct.media_bay_info*, %struct.media_bay_info** %3, align 8
  %25 = load i32, i32* @KEYLARGO_MBCR, align 4
  %26 = load i32, i32* @KL_MBCR_MB0_ENABLE, align 4
  %27 = call i32 @MB_BIS(%struct.media_bay_info* %24, i32 %25, i32 %26)
  %28 = load %struct.media_bay_info*, %struct.media_bay_info** %3, align 8
  %29 = load i32, i32* @KEYLARGO_MBCR, align 4
  %30 = call i32 @MB_IN32(%struct.media_bay_info* %28, i32 %29)
  %31 = call i32 @udelay(i32 5)
  %32 = load %struct.media_bay_info*, %struct.media_bay_info** %3, align 8
  %33 = load i32, i32* @KEYLARGO_MBCR, align 4
  %34 = call i32 @MB_BIC(%struct.media_bay_info* %32, i32 %33, i32 15)
  %35 = load %struct.media_bay_info*, %struct.media_bay_info** %3, align 8
  %36 = load i32, i32* @KEYLARGO_MBCR, align 4
  %37 = call i32 @MB_IN32(%struct.media_bay_info* %35, i32 %36)
  %38 = call i32 @udelay(i32 5)
  %39 = load i32, i32* %4, align 4
  %40 = load %struct.media_bay_info*, %struct.media_bay_info** %3, align 8
  %41 = getelementptr inbounds %struct.media_bay_info, %struct.media_bay_info* %40, i32 0, i32 0
  store i32 %39, i32* %41, align 4
  br label %42

42:                                               ; preds = %23, %17
  br label %43

43:                                               ; preds = %42
  %44 = load %struct.media_bay_info*, %struct.media_bay_info** %3, align 8
  %45 = load i32, i32* @KEYLARGO_MBCR, align 4
  %46 = call i32 @MB_IN32(%struct.media_bay_info* %44, i32 %45)
  %47 = ashr i32 %46, 4
  %48 = and i32 %47, 7
  store i32 %48, i32* %2, align 4
  br label %49

49:                                               ; preds = %43, %12
  %50 = load i32, i32* %2, align 4
  ret i32 %50
}

declare dso_local i32 @MB_IN8(%struct.media_bay_info*, i32) #1

declare dso_local i32 @MB_BIS(%struct.media_bay_info*, i32, i32) #1

declare dso_local i32 @MB_IN32(%struct.media_bay_info*, i32) #1

declare dso_local i32 @udelay(i32) #1

declare dso_local i32 @MB_BIC(%struct.media_bay_info*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
